# combuddy

./: .gitignore  AGENTS.md  BRANDING.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  desktop.yml  release.yml
combuddy/: __init__.py  __main__.py  api.py  civitai.py  config.py  db.py  desktop.py  detect.py  download_service.py  hashes.py  headers.py  manifest.py  norm.py  queries.py  resolver.py  roles.py  scan_service.py  scanner.py  stats.py  trash.py  workflows.py
combuddy/demo/: gen_previews.py  seed.py
combuddy/web/: index.html
combuddy/web/assets/: index--ymojoU9.js  index-04Bwh4fq.js  index-0JkoUYYX.js  index-8jGiyhME.css  index-B2HM0kX0.js  index-B56KAuaz.css  index-BGhe0y_g.css  index-BKyjntch.css  index-BSMQD9Qk.js  index-BVeedARZ.js  index-BVy8cbBa.js  index-BZYws7Jq.js  index-BcaIjtd2.js  index-BiMAPlvh.js  index-BpB3yrNW.js  index-BtAlBx_e.css  index-BxMbpqwq.js  index-C4wtlVK5.js  index-CHh_l-Jr.js  index-CJXlkWRt.css  index-CPkKPgo7.css  (+38 more)
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: copy-themes.mjs
frontend/src/: App.vue  api.test.ts  api.ts  format.test.ts  format.ts  i18n-parity.test.ts  i18n.ts  labels.ts  main.ts  useCleanup.test.ts  useCleanup.ts  useDashboard.test.ts  useDashboard.ts  useDemo.test.ts  useDemo.ts  useDesktop.test.ts  useDesktop.ts  useDetect.test.ts  useDetect.ts  useDownload.test.ts  useDownload.ts  useDuplicates.test.ts  useDuplicates.ts  useLibrary.test.ts  useLibrary.ts  useLocate.test.ts  useLocate.ts  useManifest.test.ts  useManifest.ts  useNav.test.ts  useNav.ts  useScanStatus.test.ts  useScanStatus.ts  useSettings.test.ts  useSettings.ts  useTheme.test.ts  useTheme.ts  useTrash.test.ts  useTrash.ts  useWorkflows.test.ts  (+1 more)
packaging/: combuddy.spec  desktop_entry.py  gen_icons.py  macos_dmg.sh
packaging/icons/: combuddy.icns
scripts/: release_prepare.py
tests/: conftest.py  test_api.py  test_api_v11.py  test_civitai.py  test_config.py  test_db.py  test_db_migrate.py  test_demo.py  test_demo_api.py  test_desktop.py  test_detect.py  test_detect_api.py  test_download.py  test_duplicates.py  test_enrich.py  test_extract_facts.py  test_hashes.py  test_headers.py  test_headers_gguf.py  test_locate.py  test_main.py  test_manifest.py  test_norm.py  test_packaging.py  test_queries.py  test_release_prepare.py  test_resolver.py  test_roles.py  test_scan_service.py  test_scanner.py  test_stats.py  test_trash.py  test_version.py  test_workflows.py
(+14 files in other folders)
