[project]
name = "combuddy"
version = "0.1.0"
description = "A local model & workflow dependency manager for ComfyUI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "peilinok", email = "peilinok@gmail.com" }]
keywords = ["comfyui", "stable-diffusion", "models", "workflows", "dependency-management"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
]
dependencies = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
combuddy = "combuddy.__main__:main"

[project.urls]
Homepage = "https://github.com/peilinok/combuddy"
Repository = "https://github.com/peilinok/combuddy"
Issues = "https://github.com/peilinok/combuddy/issues"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["combuddy"]

[tool.setuptools.package-data]
combuddy = ["web/**/*"]
